# tesseract-nodejs

./: .releaserc.json  CHANGELOG.md  README.md  index.d.ts  index.js  package.json
.github/workflows/: main.yml
cpp/: CMakeLists.txt
cpp/src/: main.cpp
cpp/src/_wrapped/: TesseractWrapped.cpp  TesseractWrapped.h
cpp/src/services/: Tesseract.cpp  Tesseract.h
example/: index.js
